# 00_dev

00_Code/ContetCreatorAI/: .gitignore  README.md  index.html  package-lock.json  package.json  prompt.md
00_Code/ContetCreatorAI/doc/: architecture.md  requirements.md  sample_transcript.md  specification.md  tasks.md  test_licenses.md
00_Code/ContetCreatorAI/src/: App.tsx  index.css  vite-env.d.ts
00_Code/ContetCreatorAI/src-tauri/: Cargo.toml  tauri.conf.json
00_Code/ContetCreatorAI/src-tauri/.cargo/: config.toml
00_Code/ContetCreatorAI/src-tauri/capabilities/: default.json
00_Code/ContetCreatorAI/src-tauri/icons/: icon.icns
00_Code/ContetCreatorAI/src-tauri/src/: lib.rs  main.rs
00_Code/ContetCreatorAI/src/ai/: contentGenerator.ts  pipeline.ts  provider.ts  requirementsGenerator.ts  researchAgent.ts  scriptGenerator.ts  strategyGenerator.ts  topicExtractor.ts
00_Code/Lstep_GAS/replyLineforFormWithoutLStepAPI/: LStepWebhook.gas  README.txt  returnLINE.gas
00_Code/Lstep_GAS/sendJobOpning/: AddJobData.gas  JobManageModal.html  JobMange.gas  JobModal.html  Mapping.gas  SpreadStructure.md  issues.md  returnLINE.gas  technical_spec.md  user_guide.md  user_manual.md  user_operations.md
00_Code/TodoApp/.claude/: settings.local.json
00_Code/TodoApp/code/: .gitignore  package-lock.json  package.json
00_Code/TodoApp/doc/: spec.md  supabase-mcp-setup.md
100_LesearchNotes/MArKEIT_Workflow/: 00_【あつき共有用】Lステップ進行シート.md  01_Lステップ構築フロー整理.md  02_自動化アイデアメモ.md  03_自動化システム仕様モック.md
100_LesearchNotes/research-notes/: github_overview.md
(+46 files in other folders)
