[package]
name = "content-creator-ai"
version = "0.1.0"
description = "ContentCreatorAI - AI-powered content generation desktop app"
authors = []
edition = "2021"

[lib]
name = "content_creator_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "content-creator-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
